<resources>
    <string name="app_name">GitDevs</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="errorMsg">Error</string>
    <string name="AUTH_TOKEN">4d706a7745ee93608a1e4ec03942aa8cd44035b7</string>
    <string name="DetailNameLabel">Rizky Putra Pradhana</string>
    <string name="avatarDesc">Username Avatar</string>
    <string name="followerCount">12345678</string>
    <string name="followerCountLabel">Followers</string>
    <string name="followingCount">1234</string>
    <string name="followingCountLabel">Following</string>
    <string name="repoCountLabel">Repositories</string>
    <string name="userLoc">Malang, East Java</string>
    <string name="userLink">rizkyputra.com</string>
    <string name="userEmail">rizkyputra@gmail.com</string>
    <string name="userBio">A student by day, still a student by night</string>
    <string name="locIconDesc">location icon</string>
    <string name="companyName">P.T Mencari Cinta Sejati</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errorNoFollowing">This user has not followed anyone!</string>
    <string name="errorNoFollowers">This user has no followers</string>
    <string name="compIconDesc">Company Icon</string>
    <string name="blogIconDesc">Blog Icon</string>
    <string name="emailIconDesc">Email Icon</string>
    <string name="followsIconDesc">Follows Icon</string>
    <string name="searchIconDesc">Search Icon</string>
    <string name="errorNoUserFound">No User Found!</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="timeLabel">Reminder Time</string>
    <string name="search_Motto">Search for other developers like you!</string>
    <string name="octocat">octocat</string>
    <string name="favorites">Favorites</string>
    <string name="mockupName">Rizky Putra Pradhana Budiman</string>
    <string name="deleteFav">Delete from favorites</string>
    <string name="mockupUsername">rizkyputrapb</string>
</resources>