<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:menuCategory="container">
        <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_baseline_search_24_white"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always"/>
        <item
            android:id="@+id/app_bar_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/app_bar_favorites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorites"
            app:showAsAction="never" />
    </group>
</menu>