<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onclick"
            type="com.example.githubuserdetailed.ui.favorites.OnItemFavoriteListener" />

        <variable
            name="favorites"
            type="com.example.githubuserdetailed.dao.Favorites" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="166dp"
                android:layout_height="250dp"
                android:foregroundGravity="center">

                <ImageView
                    android:id="@+id/userAvatarFav"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/userNameFav"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{favorites.name}"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userAvatarFav"
                    tools:text="@string/mockupName" />

                <TextView
                    android:id="@+id/userLoginFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{favorites.username}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/userNameFav"
                    app:layout_constraintStart_toStartOf="@+id/userNameFav"
                    app:layout_constraintTop_toBottomOf="@+id/userNameFav"
                    tools:text="@string/mockupUsername" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="0dp"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:onClick="@{()->onclick.OnBtnDeleteListener(favorites.username)}"
                    android:text="@string/deleteFav"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>